Add TypeScript support

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         </h1>
     </dic>
     
-    <script src="main.js"></script>
+    <script src="./dist/bundle.js"></script>
 </body>
 </html>
